search by name or id
added functionality to search by name, and a response if either method of searching finds nothing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 .idea/
+.vs/BWBE/DesignTimeBuild/.dtbcache.v2
+.vs/BWBE/DesignTimeBuild/.dtbcache.v2
+.vs/BWBE/DesignTimeBuild/.dtbcache.v2
+.vs/BWBE/FileContentIndex/47ce3844-701f-4224-994a-2fd675c213d9.vsidx
+.vs/BWBE/DesignTimeBuild/.dtbcache.v2
+.vs/BWBE/FileContentIndex/79f8858d-f6a3-4ca1-a983-2b5ef774b2f2.vsidx
