--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ riderModule.iml
 /_ReSharper.Caches/
 .idea/
 BWBE/Properties/launchSettings.json
+BWBE/Properties/launchSettings.json
+/.vs/BWBE/FileContentIndex
+/.vs/BWBE/DesignTimeBuild
+/.vs/BWBE/FileContentIndex
+/.vs/BWBE/v17
+/.vs/ProjectEvaluation
+BWBE/Properties/launchSettings.json
